<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.pyeatt.tipcalculator.MainActivity">

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="right"
        android:padding="@dimen/cellpadding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/amountText" />

    <EditText
        android:id="@+id/amountEditView"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_gravity="fill_horizontal"
        android:padding="@dimen/cellpadding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/amountEditHint" />

    <TextView
        android:id="@+id/customTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="right"
        android:padding="@dimen/cellpadding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/customText" />

    <SeekBar
        android:id="@+id/customSeekBar"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:progress="15"
        android:max="30"
        android:padding="@dimen/cellpadding"
        android:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/amountEditHint" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="right"
        android:padding="@dimen/cellpadding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tipText" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_gravity="right"
        android:padding="@dimen/cellpadding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/totalText" />

    <TextView
        android:id="@+id/percent15TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:padding="@dimen/cellpadding"
        android:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/percent15Text" />

    <TextView
        android:id="@+id/percentCustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:padding="@dimen/cellpadding"
        android:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/percentCustomText" />
</GridLayout>
